--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
  <div class="wrapper">
    <main>
     <div class="main-gradient">
-      <div class="sun">
+      <div class="sun" onclick="switchTimes()">
         
       </div>
     </div>
    </main>
-   <footer class="footer" onclick="switchTimes()">
+   <footer class="footer" >
     <p class="time-description">
     </p>
+    <p id="countdownField"></p>
     <p class="time">
     </p>
    </footer>
